# PrusaSlicer

./: version.inc
.github/workflows/: build_flatpak.yml  build_flatpak_asan.yml  build_nogui.yml  build_osx.yml  build_osx_asan.yml  build_windows.yml  bundle_flatpak.yml  get_release_flatpak_manifest.yml  static_analysis.yml
bundled_deps/hidapi/: CMakeLists.txt
resources/profiles/: PrusaResearchSLA.ini
resources/workflows/: workflows.json
src/: CMakeLists.txt
src/libslic3r/: CMakeLists.txt  Config.cpp  Config.hpp  Model.cpp  Model.hpp  Preset.cpp  PresetBundle.cpp  PresetBundle.hpp  Print.hpp  PrintApply.cpp  PrintBase.hpp  PrintConfig.cpp  PrintConfig.hpp  SLAPrint.cpp  SLAPrint.hpp  SLAPrintSteps.cpp  SLAPrintSteps.hpp  TriangleMesh.cpp  TriangleMesh.hpp  libslic3r.h
src/libslic3r/Format/: SL1.cpp  SLAArchiveFormatRegistry.cpp
src/libslic3r/SLA/: DefaultSupportTree.cpp  PrinterCorrections.cpp  PrinterCorrections.hpp  SupportSlicesCache.cpp  SupportSlicesCache.hpp  SupportTree.cpp  SupportTree.hpp  SupportTreeBuilder.cpp  SupportTreeBuilder.hpp  SupportTreeSlicer.cpp  SupportTreeSlicer.hpp  SupportTreeTypes.hpp  Workflows.cpp  Workflows.hpp
src/sla-time-estimates/: CMakeLists.txt  README.md  main.cpp
src/sla-time-estimates/include/sla-time-estimates/: SLATimeEstimate.hpp
src/sla-time-estimates/src/: SLATimeEstimate.cpp
src/slic3r/GUI/: BackgroundSlicingProcess.cpp  BackgroundSlicingProcess.hpp  ConfigManipulation.cpp  ConfigManipulation.hpp  Downloader.cpp  Field.cpp  GUI_App.cpp  Tab.cpp  (+22 more)
tests/sla_print/: CMakeLists.txt  sla_supports_slicing.cpp
(+5 files in other folders)
